# krogon-istio

./: README.md  pyproject.toml  setup.py  tag.sh
krogon_istio/: __init__.py  annotations.py  istio.py  maybe.py
tests/: istio_test.py
