[tool.poetry]
name = "krogon-istio"
version = "0.0.1"
description = "Krogon step for configuring Istio virtual service"
authors = ["Kirmanie L Ravariere <enamrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
dictdiffer = "^0.8.0"
"ruamel.yaml" = "^0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
